2008-01-22  Per Abrahamsen  <abraham@dina.kvl.dk>

	* msoltranrect_forward.C: New model.
	* Makefile (MODELS): Add it.

	* aom.C (AOM::full_C, AOM::full_N): Take surface area into account.

2008-01-08  Per Abrahamsen  <abraham@dina.kvl.dk>

	* msoltranrect_Mollerup.C: Use 'solver.h'.

2008-01-03  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Makefile (MODELS, REMOVE): Remove adsorption_none.C and
	adsorption_full.C.
	* adsorption.C: Add code here.

	* adsorption.C, adsorption.h (AdsorptionLinear): New class.
	* adsorption_linear.C (AdsorptionLinearOld): Renamed.

	* chemical.h, chemical_std.C: Restored 'adsorption' parameter.
	* movement_1D.C, movement_rect.C: Use it.

2007-12-17  Per Abrahamsen  <abraham@dina.kvl.dk>

	* root_system.C (nitrogen_uptake): Handle negative PotNUpt request.

2007-12-13  Per Abrahamsen  <abraham@dina.kvl.dk>

	* sample/test-aba.dai: New setup.
	* sample/Makefile (SETUPS): Add it.

2007-12-12  Per Abrahamsen  <abraham@dina.kvl.dk>

	* number_arit.C (NumberSqr::dimension): Multiply operand dimension
	with itself.
	(NumberOperand::dimension): If dimension is "none", leave it alone.

	* ABAprod_soil.C: Renamed from ABAprod_expr.C
	* ABAprod_uptake.C: Renamed from ABAprod_soil.C
	* Makefile (MODELS, REMOVE): Update.

	* crop_std.C (tick): Enable ABA from roots.
	* vegetation.h, vegetation_crops.C, vegetation_permanent.C:
	* crop.h, crop_old.C, crop_sold.C, crop_simple.C, crop_std.C:
	* root_system.C, root_system.h (check): New function.
	(initialize): Take 'Treelog&' argument.
	* column_std.C (initialize, check): Update caller.

2007-12-11  Per Abrahamsen  <abraham@dina.kvl.dk>

	* ABAprod.C, ABAprod.h: New component.
	* ABAprod_root.C, ABAprod_soil.C, ABAprod_expr.C: New model.
	* Makefile (COMPONENTS, MODELS): Add them.
	* root_system.h, root_system.C (ABAExtraction):  New log variable.
	(ABAConc): New state variable.
	(ABAprod): New parameter.

2007-12-10  Per Abrahamsen  <abraham@dina.kvl.dk>

	* run_Qt.h (stop): Made it a slot.