@@ -1,3 +1,9 @@
+2008-01-24  Per Abrahamsen  <abraham@dina.kvl.dk>
+
+	* assertion.h (daisy_non_negative): Renamed from 'assert_non_negative'.
+
+	* mathlib.C, newlib.h (balance): New function.
+
 2008-01-22  Per Abrahamsen  <abraham@dina.kvl.dk>
 
 	* msoltranrect_forward.C: New model.
